Add brand name and remove floor plan field

--- a/style.css
+++ b/style.css
@@ -37,6 +37,13 @@ header h1 {
     margin: 0 0 10px 0;
 }
 
+.brand {
+    color: blue;
+    font-family: 'Arial Black', Arial, sans-serif;
+    text-transform: uppercase;
+    margin-right: 10px;
+}
+
 .controls {
     position: absolute;
     top: 0;
