--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header h1 {
     color: blue;
     font-family: 'Arial Black', Arial, sans-serif;
     text-transform: uppercase;
+    font-size: 3rem;
     margin-right: 10px;
 }
 
